# fpl-copilot

./: .env.example  .gitignore  LICENSE  README.md  cli.py  pyproject.toml  requirements.txt
core/: auth.py  fpl.py  scoring.py
db/: schema.sql
tools/: analysis.py  browser.py  news.py  registry.py  team.py
